# polymorphic_value

./: .appveyor.yml  .bazelrc  .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  BUILD.bazel  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  TestClonedPtr.cpp  TestCloningPtr.cpp  TestDeepPtr.cpp  TestIndirect.cpp  TestPoly.cpp  WORKSPACE.bazel  boost_test_polymorphic_value.cpp  cloned_ptr.h  cloning_ptr.h  conanfile.py  deep_ptr.h  draft.md  indirect.h  install_hooks.sh  poly.h  polymorphic-config.cmake.in  polymorphic.gdb.py  polymorphic.h  polymorphic.natvis  polymorphic_test.cpp  polymorphic_value-config.cmake.in  polymorphic_value.gdb.py  polymorphic_value.h  polymorphic_value.natvis  polymorphic_value_test.cpp  test_polymorphic_value.cpp
.conan/: build.py
.conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
.github/workflows/: bazel.yml  cmake.yml  code_coverage.yml  conan.yml
.travis/: install.sh  run.sh
doc/: Jamfile.v2  build.sh  intro.qbk  polymorphic_value.qbk  push.sh  tutorial.qbk  type_requirements.qbk
documentation/: CMakeLists.txt  p0201.md
include/boost/: polymorphic_value.h  polymorphic_value.hpp
scripts/: build.py  test-docker.py
talks/: 2017_1_25_cxx_london.ipynb  2017_1_25_cxx_london.md  2022_06_14_cxx_london.md  2022_07_05_CppOnSea.md  2022_08_02_cxx_london.md  slides.sh
test/: boost_test_polymorphic_value.cpp  test_polymorphic_value.cpp
