cc_library(
    name = "polymorphic",
    hdrs = ["polymorphic.h"],
    copts = ["-Iexternal/polymorphic/"],
)

cc_test(
    name = "polymorphic_test",
    srcs = [
        "polymorphic_test.cpp",
    ],
    copts = ["-Iexternal/polymorphic/"],
    deps = [
        ":polymorphic",
        "@catch2//:catch2_main",
    ],
)
